--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.23.26",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "scratchcard-js": "^1.5.5",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18"
   },
