--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,12 +22,13 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+
+    /* Path aliases */
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
-  "include": ["src"],
-  "paths": {
-    "@/*": [
-      "./src/*"
-    ]
-  }
+  "include": ["src"]
 }
